# dotlin-lang

./: .gitignore  ALL_TEST_OUTPUTS.txt  CMakeLists.txt  CURRENT_LIMITATIONS.md  README-DEV.md  README.md  TESTING_PROGRESS.md  TODO.md  all_comments.txt  all_todos.txt  array_size_test2.lin  array_test_concat.lin  array_test_fixed.lin  array_test_separate.lin  array_test_single.lin  benchmark_output.txt  chained_test.lin  comprehensive_lambda.lin  comprehensive_test.lin  debt_report.txt  debug_array.lin  debug_simple_lambda.lin  debug_test.lin  debug_this.lin  direct_call_only.lin  filtered_comments.txt  final_test.lin  for_loop_test_nocomments.lin  hello_test.lin  implementation_plan.md.resolved  lexer_test.cpp  main.cpp  project_comments_scan.txt  project_status.md.resolved  roadmap-v1.md  run_all_tests.sh  simple_test.cpp  simple_test.lin  simple_test2.lin  square_test.lin  (+15 more)
apps/: CMakeLists.txt
apps/dotlin/: main.cpp
cmake/: DotlinOptions.cmake  DotlinWarnings.cmake
docs/: README.md  features.md  io_functions.md  main_function.md
examples/: class_declaration.lin  conditional_expression.lin  data_type_vars.lin  extension_functions_example.lin  func_returning_nullable_two.lin  lambda.lin  mutable_vars.lin  nested_comments.lin  package.lin  print.lin  println.lin  range_out_of.lin  standard_input_read.lin  string_templates.lin  top_level_vars.lin  type_checks_casts_three.lin  var_type_inference.lin  vars.lin
include/dotlin/: interpreter.h  lexer.h  parser.h  parser.h.backup  version.hpp  visitors.h
src/: CMakeLists.txt  interpreter.cpp  interpreter.cpp.backup  interpreter.cpp.bak  lexer.cpp  parser.cpp  version.cpp
src/interpreter/: builtins.cpp  constant_folder.cpp  dead_code_elimination.cpp  environment.cpp  evaluator.cpp  executer.cpp  interpreter.cpp  main.cpp  resolver.cpp  typechecker.cpp  utils.cpp
tests/: CMakeLists.txt  addition_test.lin  assignment_test.lin  benchmark_scope.cpp  benchmark_scope.kts  benchmark_scope.lin  benchmark_scope.py  benchmark_scope_cpp  class_constructor_test.lin  comprehensive_lambda.lin  debug_parser.cpp  for_loop_test.lin  minimal_opt_test.lin  optimization_test.lin  simple_lambda.lin  simple_tests.cpp  test_debug.cpp  test_dotlin.cpp  when_test.lin
tests/files/: 01_basic_minimal.lin  01_toString_simple.lin  02_string_methods_comprehensive.lin  03_array_methods_comprehensive.lin  04_integration_simple.lin  LIST_OF_TESTS.md  advanced_array_methods_test.lin  advanced_string_methods_test.lin  args_content_test.lin  args_test.lin  array_advanced_test.lin  array_construction_test.lin  array_methods_test.lin  array_size_test.lin  array_test.lin  array_test2.lin  array_test_comments3.lin  array_test_interpolation.lin  array_test_minimal.lin  array_test_no_content.lin  array_test_nocomments.lin  array_test_simple.lin  assignment_substring_test.lin  basic_test.lin  chained_method_test.lin  class_constructor_test.lin  class_test_two.lin  class_with_method_test.lin  collection_test.lin  complex_test.lin  complex_test_no_input.lin  comprehensive_feature_test.lin  comprehensive_test.lin  constructor_test.lin  control_flow_test.lin  datetime_test.lin  debug_args_simple.lin  debug_array_simple.lin  debug_case_conversion.lin  debug_class.lin  (+115 more)
